Guards terminado para control de acceso al Menu Usuarios y Persmisos. Construcción satisfacotoria del proyecto con ng build --prod

--- a/src/app/Paginas/Body/backup/accounts/accounts.component.html
+++ b/src/app/Paginas/Body/backup/accounts/accounts.component.html
@@ -292,10 +292,10 @@
         <td class="Celdas-Tabla">{{account.name}}</td>
         <td class="Celdas-Tabla">{{account.detail}}</td>
         <td class="Celdas-Tabla">{{account.sign}}</td>
-        <td class="Celdas-Tabla">{{account.income | currency: account.symbol :'symbol':'1.0-6'}}</td>
-        <td class="Celdas-Tabla">{{account.expense | currency: account.symbol :'symbol':'1.0-6'}}</td>
-        <td class="Celdas-Tabla">{{account.initial_balance | currency: account.symbol :'symbol':'1.0-6'}}</td>
-        <td class="Celdas-Tabla">{{account.final_balance | currency: account.symbol :'symbol':'1.0-6'}}</td>
+        <td class="Celdas-Tabla">{{account.income | currency: account.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
+        <td class="Celdas-Tabla">{{account.expense | currency: account.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
+        <td class="Celdas-Tabla">{{account.initial_balance | currency: account.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
+        <td class="Celdas-Tabla">{{account.final_balance | currency: account.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
         <td class="Celdas-Tabla">{{account.month}}</td>
         <td class="Celdas-Tabla">{{account.year}}</td>
         <td class="Celdas-Tabla">{{account.positive_limit}}</td>
@@ -339,10 +339,10 @@
         <td class="Celdas-Tabla">{{account.name}}</td>
         <td class="Celdas-Tabla">{{account.detail}}</td>
         <td class="Celdas-Tabla">{{account.sign}}</td>
-        <td class="Celdas-Tabla">{{account.income | currency: account.symbol :'symbol':'1.0-6'}}</td>
-        <td class="Celdas-Tabla">{{account.expense | currency: account.symbol :'symbol':'1.0-6'}}</td>
-        <td class="Celdas-Tabla">{{account.initial_balance | currency: account.symbol :'symbol':'1.0-6'}}</td>
-        <td class="Celdas-Tabla">{{account.final_balance | currency: account.symbol :'symbol':'1.0-6'}}</td>
+        <td class="Celdas-Tabla">{{account.income | currency: account.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
+        <td class="Celdas-Tabla">{{account.expense | currency: account.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
+        <td class="Celdas-Tabla">{{account.initial_balance | currency: account.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
+        <td class="Celdas-Tabla">{{account.final_balance | currency: account.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
         <td class="Celdas-Tabla">{{account.month}}</td>
         <td class="Celdas-Tabla">{{account.year}}</td>
         <td class="Celdas-Tabla">{{account.positive_limit}}</td>
