--- a/src/app/Paginas/Body/login/login.component.html
+++ b/src/app/Paginas/Body/login/login.component.html
@@ -27,7 +27,7 @@
             <div class="bar"></div>
           </div>
           <div class="button-container">
-            <button class="btn btn-success btn-redondo" type="submit" [disabled]="usuario.invalid">
+            <button class="btn btn-success btn-redondo buttonFadeInUp" type="submit" [disabled]="usuario.invalid">
               <span>
                 <fa-icon [icon]="faCheck"></fa-icon>
               </span>
