--- a/src/app/Paginas/Header/nav-encode/nav-encode.component.html
+++ b/src/app/Paginas/Header/nav-encode/nav-encode.component.html
@@ -31,7 +31,7 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
     <ng-container *ngIf="userService.activo()">
       <ul class="nav">
-        <li class="nav-item dropdown"  *ngIf="userService.isAdmin()">
+        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-light tamaño-font" id="navbarDropdownMenuUsuariosLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Usuarios
           </a>
