--- a/src/app/Paginas/Body/usuarios/perfil/perfil.component.html
+++ b/src/app/Paginas/Body/usuarios/perfil/perfil.component.html
@@ -130,7 +130,7 @@
           <div class="col d-flex mb-5 flex-row align-content-center justify-content-center">
             <div class="col d-flex flex-column align-content-center justify-content-center">
               <h3 class="font-weight-light text-center">Tipo:</h3>
-              <h3 class="font-weight-normal text-center item-transparent">{{usuarioService.UsuarioCurrent.tipo}}</h3>
+              <h3 class="font-weight-normal text-center item-transparent">{{util.nameTipo(usuarioService.UsuarioCurrent.tipo)}}</h3>
             </div>
             <div class="col d-flex flex-column align-content-center justify-content-center">
               <h3 class="font-weight-light text-center">Cargo:</h3>
